<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerlayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:descendantFocusability="afterDescendants"
    android:orientation="horizontal"
    tools:context=".SelectCityFragment">
    <!--<Spinner
        android:id="@+id/spinnerTopCityZone"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:paddingLeft="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical|left"
        android:textColor="@color/ziti1"
        android:textSize="@dimen/bottom_textsize2"
        />
    <Spinner
        android:id="@+id/spinnerTwoCityZone"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical|left"
        android:textColor="@color/ziti1"
        android:textSize="@dimen/bottom_textsize2"
        />-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/tf11"
        android:textSize="25sp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical|left"
        android:paddingLeft="20dp"
        android:textColor="@color/pmziti"
        android:background="@color/topbkg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:paddingTop="30dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="true"
            >
            <LinearLayout
                android:id="@+id/cityleftlayout"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:descendantFocusability="afterDescendants"
                android:clickable="true"
                android:paddingLeft="15dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/citytext01"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/lefttxtview"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusDown="@+id/citytext02"
                    android:nextFocusRight="@+id/cityrightlayout"
                    android:gravity="center"
                    android:textColor="@color/wasuselectziti02"
                    android:textSize="@dimen/selecttext_size"
                    android:text="@string/str14"/>
                <TextView
                    android:id="@+id/citytext02"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/lefttxtview"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusDown="@+id/citytext03"
                    android:nextFocusRight="@+id/cityrightlayout"
                    android:gravity="center"
                    android:textColor="@color/wasuselectziti02"
                    android:textSize="@dimen/selecttext_size"
                    android:text="@string/str15"/>
                <TextView
                    android:id="@+id/citytext03"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/lefttxtview"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusDown="@+id/citytext04"
                    android:nextFocusRight="@+id/cityrightlayout"
                    android:gravity="center"
                    android:textColor="@color/wasuselectziti02"
                    android:textSize="@dimen/selecttext_size"
                    android:text="@string/str16"/>
                <TextView
                    android:id="@+id/citytext04"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/lefttxtview"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusDown="@+id/citytext05"
                    android:nextFocusRight="@+id/cityrightlayout"
                    android:gravity="center"
                    android:textColor="@color/wasuselectziti02"
                    android:textSize="@dimen/selecttext_size"
                    android:text="@string/str17"/>
                <TextView
                    android:id="@+id/citytext05"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/lefttxtview"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusDown="@+id/citytext06"
                    android:nextFocusRight="@+id/cityrightlayout"
                    android:gravity="center"
                    android:textColor="@color/wasuselectziti02"
                    android:textSize="@dimen/selecttext_size"
                    android:text="@string/str18"/>
                <TextView
                    android:id="@+id/citytext06"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/lefttxtview"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusDown="@+id/citytext07"
                    android:nextFocusRight="@+id/cityrightlayout"
                    android:gravity="center"
                    android:textColor="@color/wasuselectziti02"
                    android:textSize="@dimen/selecttext_size"
                    android:text="@string/str19"/>
                <TextView
                    android:id="@+id/citytext07"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/lefttxtview"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusDown="@+id/citytext08"
                    android:nextFocusRight="@+id/cityrightlayout"
                    android:gravity="center"
                    android:textColor="@color/wasuselectziti02"
                    android:textSize="@dimen/selecttext_size"
                    android:text="@string/str20"/>
                <TextView
                    android:id="@+id/citytext08"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/lefttxtview"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusDown="@+id/citytext09"
                    android:nextFocusRight="@+id/cityrightlayout"
                    android:gravity="center"
                    android:textColor="@color/wasuselectziti02"
                    android:textSize="@dimen/selecttext_size"
                    android:text="@string/str21"/>
                <TextView
                    android:id="@+id/citytext09"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/lefttxtview"
                    android:layout_weight="1.0"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusDown="@+id/citytext10"
                    android:nextFocusRight="@+id/cityrightlayout"
                    android:gravity="center"
                    android:textColor="@color/wasuselectziti02"
                    android:textSize="@dimen/selecttext_size"
                    android:text="@string/str22"/>
                <TextView
                    android:id="@+id/citytext10"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/lefttxtview"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusDown="@+id/citytext11"
                    android:nextFocusRight="@+id/cityrightlayout"
                    android:gravity="center"
                    android:textColor="@color/wasuselectziti02"
                    android:textSize="@dimen/selecttext_size"
                    android:text="@string/str23"/>
                <TextView
                    android:id="@+id/citytext11"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/lefttxtview"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusDown="@+id/citytext01"
                    android:nextFocusRight="@+id/cityrightlayout"
                    android:gravity="center"
                    android:textColor="@color/wasuselectziti02"
                    android:textSize="@dimen/selecttext_size"
                    android:text="@string/str24"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/cityrightlayout"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusLeft="@+id/citytext01"
                android:clickable="true"
                android:descendantFocusability="afterDescendants"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="2dp"
            android:layout_height="600dp"
            android:layout_marginLeft="10dp"
            android:background="@color/topbkg"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="5dp"
            />
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:paddingLeft="20dp">
            <TextView
                android:id="@+id/jdtext01"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical|left"
                android:textColor="@color/wasuselectziti02"
                android:textSize="@dimen/selecttext_size"
                android:text="@string/tf12"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout >
