<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/totallayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1.0"
    tools:context="com.lbs.weatherdemo.activity.MainActivity"
    android:background="@drawable/bkg">

    <RelativeLayout
        android:id="@+id/toplayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">
        <ImageButton
            android:id="@+id/img_position"
            android:layout_width="52dp"
            android:layout_height="66dp"
            android:background="@drawable/wasu01_03"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/img_position_margintop"
            android:layout_marginRight="@dimen/img_position_marginright"/>
        <TextView
            android:id="@+id/temp_txtview_left"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="135dp"
            android:layout_width="185dp"
            android:layout_height="114dp"
            android:text="17°"
            android:textColor="@color/wasu01"
            android:textSize="100sp"/>
        <TextView
            android:id="@+id/weather_txtview_left"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="210dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="多云"
            android:textColor="@color/wasu01"
            android:textSize="35sp"/>
        <ImageView
            android:id="@+id/weather_img"
            android:layout_toRightOf="@id/weather_txtview_left"
            android:layout_alignBottom="@id/weather_txtview_left"
            android:layout_marginLeft="25dp"
            android:background="@drawable/d28"
            android:layout_width="150dp"
            android:layout_height="138dp" />
        <TextView
            android:id="@+id/city_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/img_position"
            android:layout_alignRight="@id/img_position"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="杭州"
            android:textStyle="bold"
            android:textColor="@color/wasu01"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/city_text"
            android:layout_alignRight="@id/img_position"
            android:gravity="center"
            android:text="18:20 pm"
            android:textStyle="bold"
            android:textColor="@color/wasu01"
            android:textSize="25sp"/>

        <LinearLayout
            android:id="@+id/layout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="90dp"
            android:paddingRight="90dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:layout_below="@id/temp_txtview_left">

            <ImageView
                android:id="@+id/shidu_imgview"
                android:layout_width="27dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/yb_03"/>
            <TextView
                android:id="@+id/shidu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wasu01"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/shidudata_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="47%"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/wumai_imgview"
                android:layout_width="37dp"
                android:layout_height="32dp"
                android:background="@drawable/yb_05"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                />
            <TextView
                android:id="@+id/wumai_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wasu02"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/wumaidata_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="优"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/qiya_imgview"
                android:layout_width="37dp"
                android:layout_height="36dp"
                android:background="@drawable/yb_07"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                />

            <TextView
                android:id="@+id/qiya_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wasu03"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/qiyadata_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="1015hpa"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/layout01"
            android:layout_marginTop="0dp"
            android:paddingLeft="90dp"
            android:paddingRight="90dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/qitianyubao_textview"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/yb2_05"
                android:nextFocusRight="@+id/fenshiyubao_textview"
                android:nextFocusLeft="@+id/taifengzhuanti_textview"
                android:nextFocusUp="@+id/city_text"
                android:layout_weight="1.0"
                android:textSize="@dimen/datatext_size"
                android:gravity="center"
                android:text="@string/wasu04"/>
            <TextView
                android:id="@+id/fenshiyubao_textview"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/yb2_05"
                android:nextFocusRight="@+id/shenhuozhishu_textview"
                android:nextFocusLeft="@+id/qitianyubao_textview"
                android:nextFocusUp="@+id/city_text"
                android:layout_weight="1.0"
                android:textSize="@dimen/datatext_size"
                android:gravity="center"
                android:text="@string/wasu05"/>

            <TextView
                android:id="@+id/shenhuozhishu_textview"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/yb2_05"
                android:nextFocusRight="@+id/gaosuqixiang_textview"
                android:nextFocusLeft="@+id/fenshiyubao_textview"
                android:nextFocusUp="@+id/city_text"
                android:layout_weight="1.0"
                android:textSize="@dimen/datatext_size"
                android:gravity="center"
                android:text="@string/wasu06"/>

            <TextView
                android:id="@+id/gaosuqixiang_textview"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/yb2_05"
                android:layout_weight="1.0"
                android:nextFocusRight="@+id/wumaiditu_textview"
                android:nextFocusLeft="@+id/shenhuozhishu_textview"
                android:nextFocusUp="@+id/city_text"
                android:textSize="@dimen/datatext_size"
                android:gravity="center"
                android:text="@string/wasu07"/>

            <TextView
                android:id="@+id/wumaiditu_textview"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:nextFocusRight="@+id/taifengzhuanti_textview"
                android:nextFocusLeft="@+id/gaosuqixiang_textview"
                android:nextFocusUp="@+id/city_text"
                android:background="@drawable/yb2_05"
                android:layout_weight="1.0"
                android:textSize="@dimen/datatext_size"
                android:gravity="center"
                android:text="@string/wasu08"/>
            <TextView
                android:id="@+id/taifengzhuanti_textview"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/yb2_05"
                android:nextFocusRight="@+id/qitianyubao_textview"
                android:nextFocusLeft="@+id/wumaiditu_textview"
                android:nextFocusUp="@+id/city_text"
                android:layout_weight="1.0"
                android:textSize="@dimen/datatext_size"
                android:gravity="center"
                android:text="@string/wasu09"/>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_relative"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:background="@drawable/wasu3_02">
    </LinearLayout>
</LinearLayout>
